--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,17 @@
 {
-    "version": 2,
-    "builds": [
-      {
-        "src": "./index.js",
-        "use": "@vercel/node"
-      }
-    ],
-    "routes": [
-      {
-        "src": "/(.*)",
-        "dest": "/"
-      }
-    ]
+  "env": {
+    "CONNECTION_URL": "mongodb+srv://mominalipubg:dash123@narrativenestcluster.gsey63b.mongodb.net/test?retryWrites=true&w=majority"
+  },
+  "builds": [
+    {
+      "src": "index.js",
+      "use": "@vercel/node"
+    }
+  ],
+  "routes": [
+    {
+      "src": "/.*",
+      "dest": "/index.js"
+    }
+  ]
 }
